[project]
name = "sqlglotc"
dynamic = ["version"]
description = "mypyc-compiled extensions for sqlglot"
authors = [{ name = "Toby Mao", email = "toby.mao@gmail.com" }]
license = "MIT"
requires-python = ">= 3.9"

[project.urls]
Homepage = "https://sqlglot.com/"
Repository = "https://github.com/tobymao/sqlglot"

[build-system]
requires = ["setuptools >= 61.0", "setuptools_scm", "mypy>=1.0", "types-python-dateutil"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools_scm]
root = ".."
fallback_version = "0.0.0"
local_scheme = "no-local-version"

[tool.mypy]
# Allow mypyc to resolve sqlglot.* from the repo root (../sqlglot/) or sdist root (./sqlglot/).
mypy_path = [".", ".."]
