[package]
name = "sqlglotrs"
version = "0.12.0"
edition = "2021"
license = "MIT"

[lib]
name = "sqlglotrs"
crate-type = ["cdylib", "rlib"]

[dependencies]
# https://www.maturin.rs/distribution.html#cross-compile-to-windows - explains `features`
pyo3 = { version ="0.25", features = ["generate-import-lib"] }
rustc-hash = { version = "2.1" }
