[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "sqlglotrs"
description = "An easily customizable SQL parser and transpiler"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
]
authors = [
  { name="Toby Mao", email="toby.mao@gmail.com" },
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/tobymao/sqlglot"
Issues = "https://github.com/tobymao/sqlglot/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
