[project]
name = "sqlglotrs"
version = "0.13.0"
description = "Deprecated: use sqlglotc instead"
authors = [{ name = "Toby Mao", email = "toby.mao@gmail.com" }]
license = "MIT"
requires-python = ">= 3.9"

[project.urls]
Homepage = "https://sqlglot.com/"
Repository = "https://github.com/tobymao/sqlglot"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
